exam-score-ml-stack_v3.yml
AWSTemplateFormatVersion: '2010-09-09'

Description: Exam Score ML Stack

Parameters:

  BucketName:
    Type: String
    Description: Name of the S3 bucket

  KeyName:
    Type: AWS::EC2::KeyPair::KeyName
    Description: Name of the EC2 key pair
    Default: exam-score-server-key

  MyIp:
    Type: String
    Description: Your public IPv4 address in CIDR notation, e.g. 203.0.113.10/32
    AllowedPattern: '^([0-9]{1,3}\.){3}[0-9]{1,3}/32$'

Resources:

  MLDataBucket:
    Type: AWS::S3::Bucket
    Properties:
      BucketName: !Ref BucketName
      BucketEncryption:
        ServerSideEncryptionConfiguration:
          - ServerSideEncryptionByDefault:
              SSEAlgorithm: AES256
      PublicAccessBlockConfiguration:
        BlockPublicAcls: true
        BlockPublicPolicy: true
        IgnorePublicAcls: true
        RestrictPublicBuckets: true

  # VPC
  MyVPC:
    Type: AWS::EC2::VPC
    Properties:
      CidrBlock: 10.0.0.0/16
      EnableDnsSupport: true
      EnableDnsHostnames: true
      Tags:
        - Key: Name
          Value: ExamScoreVPC

  # Public Subnet
  MySubnet:
    Type: AWS::EC2::Subnet
    Properties:
      VpcId: !Ref MyVPC
      CidrBlock: 10.0.1.0/24
      AvailabilityZone: !Select
        - 0
        - !GetAZs ''
      MapPublicIpOnLaunch: true
      Tags:
        - Key: Name
          Value: ExamScorePublicSubnet

  # Internet Gateway
  MyInternetGateway:
    Type: AWS::EC2::InternetGateway
    Properties:
      Tags:
        - Key: Name
          Value: ExamScoreInternetGateway

  # Attach Internet Gateway to VPC
  InternetGatewayAttachment:
    Type: AWS::EC2::VPCGatewayAttachment
    Properties:
      VpcId: !Ref MyVPC
      InternetGatewayId: !Ref MyInternetGateway

  # Public Route Table
  PublicRouteTable:
    Type: AWS::EC2::RouteTable
    Properties:
      VpcId: !Ref MyVPC
      Tags:
        - Key: Name
          Value: ExamScorePublicRouteTable

  # Route Internet traffic through Internet Gateway
  DefaultPublicRoute:
    Type: AWS::EC2::Route
    DependsOn: InternetGatewayAttachment
    Properties:
      RouteTableId: !Ref PublicRouteTable
      DestinationCidrBlock: 0.0.0.0/0
      GatewayId: !Ref MyInternetGateway

  # Associate subnet with public route table
  PublicSubnetRouteTableAssociation:
    Type: AWS::EC2::SubnetRouteTableAssociation
    Properties:
      SubnetId: !Ref MySubnet
      RouteTableId: !Ref PublicRouteTable

  # Security Group
  ExamScoreServerSecurityGroup:
    Type: AWS::EC2::SecurityGroup
    Properties:
      GroupDescription: Security group for exam-score-server
      VpcId: !Ref MyVPC

      SecurityGroupIngress:

        # SSH - only from my IP
        - Description: SSH from my IP
          IpProtocol: tcp
          FromPort: 22
          ToPort: 22
          CidrIp: !Ref MyIp

        # HTTP - from anywhere
        - Description: HTTP from anywhere
          IpProtocol: tcp
          FromPort: 80
          ToPort: 80
          CidrIp: 0.0.0.0/0

          # HTTP - from anywhere
        - Description: HTTP from anywhere
          IpProtocol: tcp
          FromPort: 5000
          ToPort: 5000
          CidrIp: 0.0.0.0/0

        # HTTPS - from anywhere
        - Description: HTTPS from anywhere
          IpProtocol: tcp
          FromPort: 443
          ToPort: 443
          CidrIp: 0.0.0.0/0

      Tags:
        - Key: Name
          Value: ExamScoreServerSecurityGroup

  # IAM role allowing EC2 to access the S3 and ECR
  ExamScoreServerRole:
    Type: AWS::IAM::Role
    Properties:
      #RoleName: !Sub '${AWS::StackName}-ExamScoreServerRole'
      AssumeRolePolicyDocument:
        Version: '2012-10-17'
        Statement:
          - Effect: Allow
            Principal:
              Service:
                - ec2.amazonaws.com
            Action:
              - sts:AssumeRole
              
      # AWS-managed policies attached to the role
      ManagedPolicyArns:
      - arn:aws:iam::aws:policy/AmazonEC2ContainerRegistryReadOnly

      Policies:
        - PolicyName: ExamScoreS3Access
          PolicyDocument:
            Version: '2012-10-17'
            Statement:

              # Allow the application to list objects in the bucket
              - Effect: Allow
                Action:
                  - s3:ListBucket
                Resource: !GetAtt MLDataBucket.Arn

              # Allow the application to read/write/delete objects
              - Effect: Allow
                Action:
                  - s3:GetObject
                  - s3:PutObject
                  - s3:DeleteObject
                Resource: !Sub '${MLDataBucket.Arn}/*'

  # Instance profile used by EC2
  ExamScoreServerInstanceProfile:
    Type: AWS::IAM::InstanceProfile
    Properties:
      Roles:
        - !Ref ExamScoreServerRole

  # EC2 Instance
  ExamScoreServer:
    Type: AWS::EC2::Instance
    Properties:
      InstanceType: t3.micro

      # Ubuntu 24.04 LTS
      ImageId: '{{resolve:ssm:/aws/service/canonical/ubuntu/server/24.04/stable/current/amd64/hvm/ebs-gp3/ami-id}}'

      KeyName: !Ref KeyName

      SubnetId: !Ref MySubnet

      SecurityGroupIds:
        - !Ref ExamScoreServerSecurityGroup

      IamInstanceProfile: !Ref ExamScoreServerInstanceProfile

      Tags:
        - Key: Name
          Value: exam-score-server

  # Add ECR Repository
  ECRRepository:
    Type: AWS::ECR::Repository
    Properties:
      RepositoryName: !Sub '${AWS::StackName}/exam-score-api'
      ImageScanningConfiguration:
        ScanOnPush: true
      EncryptionConfiguration:
        EncryptionType: AES256
      ImageTagMutability: IMMUTABLE

  # Add ECS Cluster
  ECSCluster:
    Type: AWS::ECS::Cluster
    Properties:
      ClusterName: !Sub '${AWS::StackName}-cluster'
      ClusterSettings:
        - Name: containerInsights
          Value: enabled

  ECSTaskExecutionRole:
    Type: AWS::IAM::Role
    Properties:
      AssumeRolePolicyDocument:
        Version: '2012-10-17'
        Statement:
          - Effect: Allow
            Principal:
              Service:
                - ecs-tasks.amazonaws.com
            Action:
              - sts:AssumeRole

      ManagedPolicyArns:
        - arn:aws:iam::aws:policy/service-role/AmazonECSTaskExecutionRolePolicy

  ECSTaskDefinition:
    Type: AWS::ECS::TaskDefinition
    Properties:
      Family: !Sub '${AWS::StackName}-task'
      NetworkMode: awsvpc
      RequiresCompatibilities:
        - FARGATE

      Cpu: '512'
      Memory: '1024'

      ExecutionRoleArn: !GetAtt ECSTaskExecutionRole.Arn

      ContainerDefinitions:
        - Name: exam-score-api
          Image: !Sub
            - '${RepositoryUri}:latest'
            - RepositoryUri: !GetAtt ECRRepository.RepositoryUri

          Essential: true

          PortMappings:
            - ContainerPort: 5000
              Protocol: tcp

          Environment:
            - Name: AWS_REGION
              Value: !Ref AWS::Region

          LogConfiguration:
            LogDriver: awslogs
            Options:
              awslogs-group: !Ref ECSLogGroup
              awslogs-region: !Ref AWS::Region
              awslogs-stream-prefix: ecs

  ECSLogGroup:
    Type: AWS::Logs::LogGroup
    Properties:
      LogGroupName: !Sub '/ecs/${AWS::StackName}'
      RetentionInDays: 14

  ECSSecurityGroup:
    Type: AWS::EC2::SecurityGroup
    Properties:
      GroupDescription: Security group for ECS Fargate tasks
      VpcId: !Ref MyVPC
      SecurityGroupIngress:
        - IpProtocol: tcp
          FromPort: 5000
          ToPort: 5000
          SourceSecurityGroupId: !Ref ExamScoreServerSecurityGroup #ALBSecurityGroup
      SecurityGroupEgress:
        - IpProtocol: -1
          CidrIp: 0.0.0.0/0

Outputs:

  BucketName:
    Description: S3 bucket name
    Value: !Ref MLDataBucket

  BucketArn:
    Description: S3 bucket ARN
    Value: !GetAtt MLDataBucket.Arn


  VpcId:
    Description: VPC ID
    Value: !Ref MyVPC

  SubnetId:
    Description: Public subnet ID
    Value: !Ref MySubnet

  SecurityGroupId:
    Description: Security group ID
    Value: !Ref ExamScoreServerSecurityGroup

  InstanceId:
    Description: EC2 Instance ID
    Value: !Ref ExamScoreServer

  PublicIp:
    Description: Public IPv4 address of exam-score-server
    Value: !GetAtt ExamScoreServer.PublicIp

  PublicDnsName:
    Description: Public DNS name of exam-score-server
    Value: !GetAtt ExamScoreServer.PublicDnsName

  KeyName:
    Description: EC2 key pair name
    Value: !Ref KeyName
